--- a/.tmp/public/index.html
+++ b/.tmp/public/index.html
@@ -58,7 +58,7 @@
  <script type="text/javascript" src="linker/vendors/layerslider/js/greensock.js"></script>
   <script type="text/javascript" src="linker/vendors/layerslider/js/layerTransition.js"></script>
   <script type="text/javascript" src="linker/vendors/layerslider/js/layerPlugin.js"></script>
-
+    <script type="text/javascript" src="linker/vendors/toastr.js"></script>
 
     <!-- angular plugins --->
   <script type="text/javascript" src="linker/plugins/angular-ui-router.js"></script>
@@ -72,6 +72,7 @@
     <!-- common modules -->
     <script type="text/javascript" src="linker/directives/layerSlider.js"></script>
   <!--<script type="text/javascript" src="linker/directives/scrollTo.js"></script>-->
+  <script type="text/javascript" src="linker/factory/toastFactory.js"></script>
     <!-- app files-->
   <script type="text/javascript" src="linker/modules/layout/layout.js"></script>
     <script type="text/javascript" src="linker/modules/home/home.js"></script>
