--- a/.tmp/public/index.html
+++ b/.tmp/public/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="linker/vendors/jquery.js"></script>
   <script type="text/javascript" src="linker/vendors/jquery.flexslider.js"></script>
     <script type="text/javascript" src="linker/vendors/angular.js"></script>
-  <script type="text/javascript" src="linker/vendors/angular-flexslider.js"></script>
+  <script type="text/javascript" src="linker/vendors/ui-bootstrap-tpls-0.10.0.min.js"></script>
   <script type="text/javascript" src="linker/vendors/jquery.cookie.js"></script>
   <script type="text/javascript" src="linker/vendors/jquery.easing.js"></script>
   <script type="text/javascript" src="linker/vendors/parallax/js/modernizr.js"></script>
