--- a/assets/linker/modules/about/about.html
+++ b/assets/linker/modules/about/about.html
@@ -22,14 +22,13 @@
                     <p>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</p>
                     <p>Incorporated in 2003 and licensed by IATA in 2004 , Quantum Travels Limited has grown to become one of Nigeria’s premier travel solution provider</p>
                       <p>Comprising of tested individuals drawn largely from the aviation sector, we have a proper blend of staff possessing a lot of experience in travel consulting and youthfulness , all geared towards delivering unparalled service .</p>
-                    <p><blockquote>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</blockquote></p>
-                    <p>We are a one stop travel shop, fully computerized and committed to providing efficient, consistent ,timely and reliable service to our customers , while representing service producers like Airlines, Car Hire companies, Holiday Resorts, Cruise Liners etc.</p>
+                     <p>We are a one stop travel shop, fully computerized and committed to providing efficient, consistent ,timely and reliable service to our customers , while representing service producers like Airlines, Car Hire companies, Holiday Resorts, Cruise Liners etc.</p>
                     <p>We represent and possess ticket stocks of all major international and domestic Airlines. We do an annual turnover of over USD25Million and are very strong financially</p>
                     <p>Our Mission is to ‘serve with a difference’ and we are driven by the vision of making all aspects relating to travel seamless and giving sound advice/consultancy drawn against years of experience in the travel industry.</p>
                 </div>
                 <div class="col-md-5">
                     <div class="w-box w-box-inverse">
-                        <iframe src="http://player.vimeo.com/video/22439234" height="258"></iframe>
+                        <p><blockquote>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</blockquote><span class="pull-right">BAA</span></p>
                     </div>
                 </div>
             </div>
