--- a/assets/linker/modules/contact/contact.html
+++ b/assets/linker/modules/contact/contact.html
@@ -86,7 +86,7 @@
 
                 <div class="col-md-12 top-buffer">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <h3 class="section-title">Ikeja Branch</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
@@ -97,8 +97,8 @@
                                 <p>+234 1 815 0926</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <h3 class="section-title">Sura Office</h3>
+                        <div class="col-md-4">
+                            <h3 class="section-title">Lagos Island</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>Block 12, Suites 22,</p>
@@ -110,25 +110,12 @@
                             </div>
                         </div>
 
-                    <div class="col-md-3">
-                        <h3 class="section-title">Trade Fair</h3>
-                        <div class="contact-info">
-                            <h5>Address</h5>
-                            <p>Zamfara Cluster,</p>
-                            <p>(BBA) 2nd floor Shop G.O.D 10,</p>
-                            <p>International Centre for Commerce,</p>
-                            <p>International Centre for Commerce,</p>
-                            <p>Badagry Expressway</p>
 
-                            <h5>Phone</h5>
-                            <p>+234 705 508 4685</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <h3 class="section-title">Abuja Office</h3>
                         <div class="contact-info">
                             <h5>Address</h5>
-                            <p>Gwandl Center,</p>
+                            <p>Gwandal Center,</p>
                             <p>Plot 1015, Fria Close,</p>
                             <p> Off Adetokunbo Ademola Way,</p>
                             <p>Wuse 2, Abuja</p>
