--- a/.tmp/public/linker/modules/home/home.html
+++ b/.tmp/public/linker/modules/home/home.html
@@ -50,7 +50,8 @@
                 Quantum Travel and Tours is your one stop shop for everything travels, tours, holidays and explorations.We help package and make available
                 services for a travel experience you can never forget.Our customers.....they always come back
             </p>
-            <a href="http://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:75%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:3500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>
+            <!--<a href="http://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:75%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:3500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>-->
+            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Learn More From Us</a>
         </div>
 
         <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
@@ -78,7 +79,7 @@
                 We also offer Corporate travel services for organisations.
                 This way you focus on your work and we take care of your travel arrangements.
             </p>
-            <a href="https://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>
+            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Learn More From Us</a>
         </div>
     </div>
 </section>
@@ -215,14 +216,14 @@
             <div class="row">
                 <div class="col-md-9">
                     <h1>
-                        Enhance travel experience, only on our portal
+                        Enhance travel experience, only at Quantum <!--only on our portal -->
                     </h1>
                 </div>
-                <div class="col-md-3">
-                    <a class="btn btn-one btn-lg pull-right" title="" href="http://ajala.ng" target="blank">
-                        <i class="fa fa-desktop"></i> Explore the Portal
-                    </a>
-                </div>
+                <!--<div class="col-md-3">-->
+                    <!--<a class="btn btn-one btn-lg pull-right" title="" href="http://ajala.ng" target="blank">-->
+                        <!--<i class="fa fa-desktop"></i> Explore the Portal-->
+                    <!--</a>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
