--- a/.tmp/public/index.html
+++ b/.tmp/public/index.html
@@ -29,6 +29,7 @@
 
       <link rel="stylesheet" href="linker/vendors/layerslider/css/layerslider.css">
       <link rel="stylesheet" href="linker/styles/project.css">
+      <link rel="stylesheet" href="linker/styles/hover.css">
 
       <script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
