--- a/.tmp/public/linker/modules/about/about.html
+++ b/.tmp/public/linker/modules/about/about.html
@@ -19,16 +19,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <p>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</p>
-                    <p>Incorporated in 2003 and licensed by IATA in 2004 , Quantum Travels Limited has grown to become one of Nigeria’s premier travel solution provider</p>
-                      <p>Comprising of tested individuals drawn largely from the aviation sector, we have a proper blend of staff possessing a lot of experience in travel consulting and youthfulness , all geared towards delivering unparalled service .</p>
-                     <p>We are a one stop travel shop, fully computerized and committed to providing efficient, consistent ,timely and reliable service to our customers , while representing service producers like Airlines, Car Hire companies, Holiday Resorts, Cruise Liners etc.</p>
-                    <p>We represent and possess ticket stocks of all major international and domestic Airlines. We do an annual turnover of over USD25Million and are very strong financially</p>
-                    <p>Our Mission is to ‘serve with a difference’ and we are driven by the vision of making all aspects relating to travel seamless and giving sound advice/consultancy drawn against years of experience in the travel industry.</p>
+                    <p><strong>Comprising of tested individuals drawn mainly from the aviation and business management industry, QTL has grown to become a leader in her local industry.</strong></p>
+                    <p><strong>Brief History</strong></p>
+                    <p>Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operation by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
+                      <p>
+                          Striving to be more than your average travel agency, QTL expanded into a full blown Travel
+                          Management Company providing all aspects of travel management services ranging from visa advisory to security tracking at our travellers' destinations
+                      </p>
+                     <p>In 2009, we established an exclusive partnership with BCD Travel, the 3rd largest global Travel Management Company. This partnership
+                         produced BCD Travel Nigeria, the corporate travel management expression of QTL. On this platform we cater to our corporate travellers to facilitate ease of travel and support then in achieving their travel goals through our all encompassing service offering.</p>
+                    <p>QTL has witnessed exponential growth since inception and now boasts five offices across Nigeria as well as several implants on clients' sites.</p>
+                    <p><strong>QTL in Figures</strong></p>
+                    <p>Workforce: 64</p>
+                    <p>Locations: 5</p>
+                    <p>Turnover: over $56m as at 2012</p>
                 </div>
                 <div class="col-md-5">
                     <div class="w-box w-box-inverse">
-                        <p><blockquote>Quantum Travels Nigeria Limited is one of Nigeria’s Leading Travel Management Company committed to the provision of world class travel consulting</blockquote><span class="pull-right">BAA</span></p>
+                       <p><h3>Mission</h3></p>
+                        <p>“To provide out-of-the-box solutions to personal and corporate travel needs, with a holistic approach to service which creates a travel experience that exceeds customer expectations with a touch of professionalism and class.”</p>
+                        <div class="clearfix"></div>
+                        <p><h3>Vision</h3></p>
+                        <p>“To be the vanguard of the global travel and tourism industry, always ensuring quality with close regard for safety and customer satisfaction.”</p>
                     </div>
                 </div>
             </div>
@@ -66,14 +78,12 @@
                 </div>
                 <div class="col-md-4">
                     <h3 class="section-title">Global services</h3>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                    </p>
+
                     <ul class="list-check">
-                        <li><i class="fa fa-check"></i> Online Realtime Self Service Booking Platform</li>
-                        <li><i class="fa fa-check"></i> Corporate Travel Planning and Booking Services</li>
-                        <li><i class="fa fa-check"></i> Agency and Third Party Booking Services</li>
-                        <li><i class="fa fa-check"></i> Bespoke Tours and Travel Packaging</li>
+                        <li><i class="fa fa-check"></i>Retail Travel Services (B2C)</li>
+                        <li><i class="fa fa-check"></i> Corporate Travel Services (B2B)</li>
+                        <li><i class="fa fa-check"></i> Tours Packaging</li>
+                        <li><i class="fa fa-check"></i> Group Travel Facilitation</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -81,15 +91,15 @@
                     <ul class="bullet">
                         <li>
                             <figure>1</figure>
-                            <p>Highest Level of professional Customer Service delivery.</p>
+                            <p>Global coverage via the BCD Travel Platform: We are present in 98 countries across 6 continents. We give you local service with global reach.</p>
                         </li>
                         <li>
                             <figure>2</figure>
-                            <p>Guranteed Customer Satisfaction.</p>
+                            <p>Lowest Fare Guarantee</p>
                         </li>
                         <li>
                             <figure>3</figure>
-                            <p>Competitive Pricing and Options advantage.</p>
+                            <p>Proven Track Record of Success: recognition from suppliers and clients</p>
                         </li>
                     </ul>
                 </div>
