--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -20,46 +20,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark">
-                        <div class="thmb-img">
-                            <i class="fa fa-group"></i>
-                        </div>
-
-                        <h2>Tours Packaging</h2>
-                        <p class="text-center">Packaged tours for groups of any size to any destination in the world. Our packages are suited to any budget and desired travel experiences </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark">
+                    <div class="w-box dark border-fade">
                         <div class="thmb-img">
                             <i class="fa fa-sitemap"></i>
                         </div>
 
-                        <h2>Corporate Travel Services</h2>
-                        <p class="text-center">We provide travel services within client's coporate premises.Travel arrangements can be hectic when you have other things to do </p>
+                        <h2>Corporate Travel Management</h2>
+                        <p class="text-center">Our Solution Network helps you define your goals and reach your destination.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark">
+                    <div class="w-box dark border-fade">
+                        <div class="thmb-img">
+                            <i class="fa fa-group"></i>
+                        </div>
+
+                        <h2>Retail Travel Services</h2>
+                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy. All our agents are trained to listen and provide you the best deals every time.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="w-box dark border-fade">
                         <div class="thmb-img">
                             <i class="fa fa-ticket"></i>
                         </div>
 
-                        <h2>Flight and Hotel reservations</h2>
-                        <p class="text-center">With our partnership networks of airlines, hotels and destinations, we combine the best in price, time, value and satisfaction and avail you only the best offers </p>
+                        <h2>Tours and Holidays</h2>
+                        <p class="text-center">We spell curiosity with a "Q" and create opportunities for memories that last a lifetime. Our well travelled staff have a destination to match every travel question.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark last">
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="w-box dark last border-fade">
                         <div class="thmb-img">
                             <i class="fa fa-truck"></i>
                         </div>
 
-                        <h2>Ground transport Services</h2>
-                        <p class="text-center">We have a wide network of car hire service partnerships that we leverage on to provide you end to end comfort from departure to arrival. </p>
+                        <h2>Destination Event Handling</h2>
+                        <p class="text-center">If you ever imagined getting married in a different country but wondered how to go about it, QTL has the capability to turn your dreams to reality.</p>
                     </div>
                 </div>
 
