--- a/.tmp/public/linker/modules/about/about.html
+++ b/.tmp/public/linker/modules/about/about.html
@@ -108,143 +108,143 @@
     </div>
 </section>
 
-<section class="slice bg-3 animate-hover-slide-3">
-    <div class="w-section inverse">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="w-box inverse">
-                        <div class="figure">
-                            <img alt="" src="linker/images/prv/team-img-5.jpg" class="img-responsive">
-                            <div class="figcaption">
-                                <ul class="social-icons text-right">
-                                    <li class="text pull-left">More on:</li>
-                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <h2>Mike Doe<small>CEO</small></h2>
-                        <p>
-                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
-                        </p>
-                    </div>
-                </div>
+<!--<section class="slice bg-3 animate-hover-slide-3">-->
+    <!--<div class="w-section inverse">-->
+    <!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<div class="col-md-3">-->
+    <!--<div class="w-box inverse">-->
+    <!--<div class="figure">-->
+    <!--<img alt="" src="linker/images/prv/team-img-5.jpg" class="img-responsive">-->
+    <!--<div class="figcaption">-->
+    <!--<ul class="social-icons text-right">-->
+    <!--<li class="text pull-left">More on:</li>-->
+    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<h2>Mike Doe<small>CEO</small></h2>-->
+    <!--<p>-->
+    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-                <div class="col-md-3">
-                    <div class="w-box inverse">
-                        <div class="figure">
-                            <img alt="" src="linker/images/prv/team-img-3.jpg" class="img-responsive">
-                            <div class="figcaption">
-                                <ul class="social-icons text-right">
-                                    <li class="text pull-left">More on:</li>
-                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <h2>Charles Doe<small>COO</small></h2>
-                        <p>
-                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
-                        </p>
-                    </div>
-                </div>
+    <!--<div class="col-md-3">-->
+    <!--<div class="w-box inverse">-->
+    <!--<div class="figure">-->
+    <!--<img alt="" src="linker/images/prv/team-img-3.jpg" class="img-responsive">-->
+    <!--<div class="figcaption">-->
+    <!--<ul class="social-icons text-right">-->
+    <!--<li class="text pull-left">More on:</li>-->
+    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<h2>Charles Doe<small>COO</small></h2>-->
+    <!--<p>-->
+    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-                <div class="col-md-3">
-                    <div class="w-box inverse">
-                        <div class="figure">
-                            <img alt="" src="linker/images/prv/team-img-1.jpg" class="img-responsive">
-                            <div class="figcaption">
-                                <ul class="social-icons text-right">
-                                    <li class="text pull-left">More on:</li>
-                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <h2>Derek Doe<small>Client Services manager</small></h2>
-                        <p>
-                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
-                        </p>
-                    </div>
-                </div>
+    <!--<div class="col-md-3">-->
+    <!--<div class="w-box inverse">-->
+    <!--<div class="figure">-->
+    <!--<img alt="" src="linker/images/prv/team-img-1.jpg" class="img-responsive">-->
+    <!--<div class="figcaption">-->
+    <!--<ul class="social-icons text-right">-->
+    <!--<li class="text pull-left">More on:</li>-->
+    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<h2>Derek Doe<small>Client Services manager</small></h2>-->
+    <!--<p>-->
+    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-                <div class="col-md-3">
-                    <div class="w-box inverse">
-                        <div class="figure">
-                            <img alt="" src="linker/images/prv/team-img-2.jpg" class="img-responsive">
-                            <div class="figcaption">
-                                <ul class="social-icons text-right">
-                                    <li class="text pull-left">More on:</li>
-                                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <h2>Mark Doe<small>Travel Manager</small></h2>
-                        <p>
-                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.
-                        </p>
-                    </div>
-                </div>
+    <!--<div class="col-md-3">-->
+    <!--<div class="w-box inverse">-->
+    <!--<div class="figure">-->
+    <!--<img alt="" src="linker/images/prv/team-img-2.jpg" class="img-responsive">-->
+    <!--<div class="figcaption">-->
+    <!--<ul class="social-icons text-right">-->
+    <!--<li class="text pull-left">More on:</li>-->
+    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<h2>Mark Doe<small>Travel Manager</small></h2>-->
+    <!--<p>-->
+    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-            </div>
-        </div>
-    </div>
-</section>
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</section>-->
 
-<section class="slice bg-3">
-    <div class="w-section inverse">
-        <div class="container">
-            <h3 class="section-title">Our partners / Clients</h3>
-            <div class="row">
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-1.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-2.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-3.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-4.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-7.png" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6">
-                    <div class="client">
-                        <a href="#">
-                            <img src="linker/images/clients/client-6.png" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> 
+    <!--<section class="slice bg-3">-->
+    <!--<div class="w-section inverse">-->
+    <!--<div class="container">-->
+    <!--<h3 class="section-title">Our partners / Clients</h3>-->
+    <!--<div class="row">-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-1.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-2.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-3.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-4.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-7.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
+    <!--<div class="client">-->
+    <!--<a href="#">-->
+    <!--<img src="linker/images/clients/client-6.png" alt="">-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</section>-->
