--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -179,13 +179,14 @@
                     <div class="aside-feature">
                         <div class="row">
                             <div class="col-md-3">
-                                <div class="icon-feature">
-                                    <i class="fa fa-cog"></i>
-                                </div>
+                                <!--<div class="icon-feature">-->
+                                    <!--<i class="fa fa-cog"></i>-->
+                                <!--</div>-->
                             </div>
                             <div class="col-md-9">
-                                <h4>We do Six</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                                <!--<h4>We do Six</h4>-->
+                                <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>-->
+                           <!---->
                             </div>
                         </div>
                     </div>
@@ -210,7 +211,7 @@
                         <span class="clearfix"></span>
 
                         <div class="text-center">
-                            <a href="http://ajala.ng" class="btn btn-lg btn-one margin-t-20 ext-source" title="" target="_blank">Get Started</a>
+                            <a href="mailto:info@quantumtravelsng.com" class="btn btn-lg btn-one margin-t-20 ext-source" title="" target="_blank">Get Started</a>
                         </div>
 
                     </div>
