--- a/.tmp/public/linker/modules/Expressions/expressions.html
+++ b/.tmp/public/linker/modules/Expressions/expressions.html
@@ -56,7 +56,7 @@
                             <div class="figcaption bg-2"></div>
 
                         </div>
-                        <h2>  BCD Travel Nigeria:</h2>
+                        <h2>  BCD Travels Nigeria:</h2>
                         <p>
                            The Corporate Travel Management arm of business. In 2009, QTL partnered with global No. 3 Travel Management Company, BCD Travel to birth BCD Travel Nigeria.
                         </p>
